Add decorative SVG racecar illustration to photo gallery section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,25 @@
         <img id="gallery-img" src="img/me.png" alt="Photo showcase" class="gallery-img">
         <button class="gallery-arrow right-arrow" onclick="moveSlide(1)">&#8594;</button>
       </div>
+      <!-- SVG Example: Simple racecar SVG for visual interest -->
+      <div style="margin-top: 16px;">
+        <!-- This SVG is a simple, beginner-friendly racecar illustration -->
+        <svg width="120" height="50" viewBox="0 0 120 50" xmlns="http://www.w3.org/2000/svg">
+          <!-- Car body -->
+          <rect x="20" y="25" width="60" height="15" rx="7" fill="#d81b60" />
+          <!-- Cockpit -->
+          <rect x="60" y="20" width="18" height="10" rx="4" fill="#fff" stroke="#333" stroke-width="1" />
+          <!-- Front wing -->
+          <rect x="10" y="32" width="15" height="4" rx="2" fill="#333" />
+          <!-- Rear wing -->
+          <rect x="80" y="28" width="10" height="8" rx="2" fill="#333" />
+          <!-- Wheels -->
+          <circle cx="30" cy="45" r="6" fill="#222" />
+          <circle cx="70" cy="45" r="6" fill="#222" />
+        </svg>
+        <!-- End SVG -->
+        <!-- Comment: This SVG is for decoration and can be replaced with any SVG you like! -->
+      </div>
     </section>
 
     <!-- Skills section: List your web development skills -->
