--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(135deg, #000 60%, #00e3c1 100%);
+    background: linear-gradient(135deg, #000 65%, #ff69b4 100%);
     position: relative;
     overflow: hidden;
   ">
@@ -47,10 +47,10 @@
       margin-bottom: 0.5em;
       letter-spacing: -1px;
       text-align: center;
-      text-shadow: 0 2px 20px #00e3c188;
+      text-shadow: 0 2px 20px #ff69b488;
     ">
       Engineering My Own <br>
-      <span style="color: #00e3c1;">Race Line</span>
+      <span style="color: #ff69b4;">Race Line</span>
     </h1>
 
     <!-- Subheading -->
@@ -61,28 +61,28 @@
       max-width: 450px;
       margin-bottom: 2em;
     ">
-      Frontend dev. F1 addict. Breaking boundaries, one <span style="color: #00e3c1; font-weight:bold;">line of code</span> at a time.
+      Frontend dev. F1 addict. Breaking boundaries, one <span style="color: #ff69b4; font-weight:bold;">line of code</span> at a time.
     </p>
 
-    <!-- Mercedes F1 Car SVG -->
+    <!-- F1 Car SVG -->
     <div style="width: 80vw; max-width: 600px;">
       <svg viewBox="0 0 600 160" fill="none" xmlns="http://www.w3.org/2000/svg">
         <!-- Rear Wing -->
-        <rect x="40" y="80" width="30" height="20" rx="4" fill="#00e3c1" opacity="0.6"/>
+        <rect x="40" y="80" width="30" height="20" rx="4" fill="#ff69b4" opacity="0.7"/>
         <!-- Front Wing -->
-        <rect x="530" y="80" width="30" height="20" rx="4" fill="#00e3c1" opacity="0.6"/>
+        <rect x="530" y="80" width="30" height="20" rx="4" fill="#ff69b4" opacity="0.7"/>
         <!-- Car Body -->
-        <rect x="70" y="90" width="460" height="18" rx="8" fill="#00e3c1"/>
+        <rect x="70" y="90" width="460" height="18" rx="8" fill="#ff69b4"/>
         <!-- Cockpit -->
-        <ellipse cx="270" cy="99" rx="22" ry="9" fill="#191919" />
-        <!-- Sidepod (grey detail) -->
-        <rect x="120" y="98" width="220" height="5" rx="2.5" fill="#b5b5b5"/>
-        <!-- Engine Cover (silver/black) -->
-        <rect x="340" y="95" width="110" height="5" rx="2.5" fill="#222"/>
+        <ellipse cx="270" cy="99" rx="22" ry="9" fill="#181818" />
+        <!-- Sidepod (grey detail, replaced with black for your palette) -->
+        <rect x="120" y="98" width="220" height="5" rx="2.5" fill="#181818"/>
+        <!-- Engine Cover -->
+        <rect x="340" y="95" width="110" height="5" rx="2.5" fill="#181818"/>
         <!-- Rear Wheel -->
-        <circle cx="90" cy="109" r="18" fill="#111" stroke="#b5b5b5" stroke-width="5"/>
+        <circle cx="90" cy="109" r="18" fill="#000" stroke="#181818" stroke-width="5"/>
         <!-- Front Wheel -->
-        <circle cx="500" cy="109" r="18" fill="#111" stroke="#b5b5b5" stroke-width="5"/>
+        <circle cx="500" cy="109" r="18" fill="#000" stroke="#181818" stroke-width="5"/>
       </svg>
     </div>
 
@@ -90,17 +90,17 @@
     <a href="#contact" style="
       display: inline-block;
       margin-top: 2em;
-      background: #00e3c1;
+      background: #ff69b4;
       color: #181818;
       font-weight: bold;
       padding: 0.75em 2em;
       border-radius: 2em;
       text-decoration: none;
-      box-shadow: 0 4px 24px #00e3c188;
+      box-shadow: 0 4px 24px #ff69b488;
       transition: background 0.2s, color 0.2s, transform 0.15s;
     "
-    onmouseover="this.style.background='#29e7ca';this.style.transform='scale(1.05)';"
-    onmouseout="this.style.background='#00e3c1';this.style.transform='scale(1)';"
+    onmouseover="this.style.background='#ff987b';this.style.transform='scale(1.05)';"
+    onmouseout="this.style.background='#ff69b4';this.style.transform='scale(1)';"
     >
       Let’s Connect
     </a>
