--- a/index.html
+++ b/index.html
@@ -29,84 +29,81 @@
   </nav>
 
   <!-- HERO BANNER SECTION -->
-  <section class="hero-banner-tweaked" style="
+  <section style="
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(135deg, #000 65%, #ff69b4 100%);
+    background: linear-gradient(135deg, #000 65%, #ff6b4 100%);
     position: relative;
     overflow: hidden;
   ">
     <!-- Main Heading -->
-    <h1 class="hero-headline-tweaked" style="
+    <h1 style="
       color: #fff;
       font-size: 3rem;
       font-weight: bold;
       margin-bottom: 0.5em;
       letter-spacing: -1px;
       text-align: center;
-      text-shadow: 0 2px 20px #ff69b488;
-      position: relative;
+      text-shadow: 0 2px 20px #ff6b488;
     ">
       Engineering My Own <br>
-      <span style="color: #ff69b4;">Race Line</span>
-      <span class="headline-underline"></span>
+      <span style="color: #ff6b4;">Race Line</span>
     </h1>
 
     <!-- Subheading -->
-    <p class="hero-subheading-tweaked" style="
+    <p style="
       color: #e0e0e0;
       font-size: 1.3rem;
       text-align: center;
       max-width: 450px;
       margin-bottom: 2em;
     ">
-      Frontend dev. F1 addict. Breaking boundaries, one <span style="color: #ff69b4; font-weight:bold;">line of code</span> at a time.
+      Frontend dev. F1 addict. Breaking boundaries, one <span style="color: #ff6b4; font-weight:bold;">line of code</span> at a time.
     </p>
 
-    <!-- Professional Hero Image (replace animated car SVG) -->
-    <div class="hero-image-container" style="width: 80vw; max-width: 480px; margin: 0 auto;">
-      <img src="img/laptop.jpg" alt="Professional workspace with laptop" style="width: 100%; border-radius: 18px; box-shadow: 0 8px 32px #ff69b488; object-fit: cover; min-height: 180px; min-width: 180px;">
+    <!-- F1 Car SVG -->
+    <div style="width: 80vw; max-width: 600px;">
+      <svg viewBox="0 0 600 160" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <!-- Rear Wing -->
+        <rect x="40" y="80" width="30" height="20" rx="4" fill="#ff6b4" opacity="0.7"/>
+        <!-- Front Wing -->
+        <rect x="530" y="80" width="30" height="20" rx="4" fill="#ff6b4" opacity="0.7"/>
+        <!-- Car Body -->
+        <rect x="70" y="90" width="460" height="18" rx="8" fill="#ff6b4"/>
+        <!-- Cockpit -->
+        <ellipse cx="270" cy="99" rx="22" ry="9" fill="#181818" />
+        <!-- Sidepod (grey detail, replaced with black for your palette) -->
+        <rect x="120" y="98" width="220" height="5" rx="2.5" fill="#181818"/>
+        <!-- Engine Cover -->
+        <rect x="340" y="95" width="110" height="5" rx="2.5" fill="#181818"/>
+        <!-- Rear Wheel -->
+        <circle cx="90" cy="109" r="18" fill="#000" stroke="#181818" stroke-width="5"/>
+        <!-- Front Wheel -->
+        <circle cx="500" cy="109" r="18" fill="#000" stroke="#181818" stroke-width="5"/>
+      </svg>
     </div>
-    <style>
-      /* Fade-in for headline and subheading */
-      .hero-headline-tweaked, .hero-subheading-tweaked {
-        opacity: 0;
-        animation: fadeInHero 1.2s ease-out forwards;
-      }
-      .hero-subheading-tweaked {
-        animation-delay: 0.5s;
-      }
-      @keyframes fadeInHero {
-        from { opacity: 0; transform: translateY(-30px); }
-        to { opacity: 1; transform: translateY(0); }
-      }
-      /* Underline accent for headline */
-      .headline-underline {
-        display: block;
-        width: 80px;
-        height: 6px;
-        background: repeating-linear-gradient(90deg, #fff 0 10px, #ff69b4 10px 20px);
-        border-radius: 3px;
-        margin: 12px auto 0 auto;
-        animation: underlineGrow 1.2s 0.7s cubic-bezier(.5,1.5,.5,1) forwards;
-        opacity: 0;
-      }
-      .hero-headline-tweaked .headline-underline {
-        opacity: 1;
-      }
-      @keyframes underlineGrow {
-        from { width: 0; opacity: 0; }
-        to { width: 80px; opacity: 1; }
-      }
-      /* Responsive tweaks for mobile */
-      @media (max-width: 600px) {
-        .hero-headline-tweaked { font-size: 2em !important; }
-        .car-svg-container { max-width: 98vw !important; }
-      }
-    </style>
+
+    <!-- Call to Action Button -->
+    <a href="#contact" style="
+      display: inline-block;
+      margin-top: 2em;
+      background: #ff6b4;
+      color: #181818;
+      font-weight: bold;
+      padding: 0.75em 2em;
+      border-radius: 2em;
+      text-decoration: none;
+      box-shadow: 0 4px 24px #ff6b4888;
+      transition: background 0.2s, color 0.2s, transform 0.15s;
+    "
+    onmouseover="this.style.background='#ff987b';this.style.transform='scale(1.05)';"
+    onmouseout="this.style.background='#ff6b4';this.style.transform='scale(1)';"
+    >
+      Let’s Connect
+    </a>
   </section>
 
   <!-- Main content: Bio and Skills side by side on large screens -->
