--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
   ">
     <!-- Hero Image -->
     <img src="img/laptop.jpg" alt="Laptop on desk" style="
-      width: 220px;
-      max-width: 60vw;
-      border-radius: 18px;
+      width: 100%;
+      max-width: 900px;
+      height: auto;
+      border-radius: 24px;
       box-shadow: 0 8px 32px #ff69b488;
       margin-bottom: 2em;
-      border: 3px solid #ff69b4;
+      border: 4px solid #ff69b4;
+      object-fit: cover;
+      display: block;
     ">
     <!-- Main Heading -->
     <h1 style="
